// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Grid> Grid 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 300px;
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="300px"
    >
      <div
        class="c2"
        span="12"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          12
        </div>
      </div>
      <div
        class="c2"
        span="1"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          1
        </div>
      </div>
      <div
        class="c2"
        span="11"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          11
        </div>
      </div>
      <div
        class="c2"
        span="2"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          2
        </div>
      </div>
      <div
        class="c2"
        span="10"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          10
        </div>
      </div>
      <div
        class="c2"
        span="3"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          3
        </div>
      </div>
      <div
        class="c2"
        span="9"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          9
        </div>
      </div>
      <div
        class="c2"
        span="4"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          4
        </div>
      </div>
      <div
        class="c2"
        span="8"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          8
        </div>
      </div>
      <div
        class="c2"
        span="5"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          5
        </div>
      </div>
      <div
        class="c2"
        span="7"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          7
        </div>
      </div>
      <div
        class="c2"
        span="6"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          6
        </div>
      </div>
      <div
        class="c2"
        span="6"
        style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
      >
        <div
          lg="1"
          md="1"
          sm="1"
          style="margin-bottom: 0px;"
          theme="[object Object]"
          xs="1"
        >
          6
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid rowGutter and colGutter 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.25rem;
  margin-left: -1.25rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testClassA c5"
            style="margin-bottom: 10px;"
          >
            <div
              style="width: 100%;"
            />
          </div>
          <div
            class="c6"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testClassB c6"
            style="margin-bottom: 10px;"
          >
            1
          </div>
          <div
            class="c6"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid rowGutter and colGutter 2`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.25rem;
  margin-left: -1.25rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 41.66666666666667%;
    -ms-flex-preferred-size: 41.66666666666667%;
    flex-basis: 41.66666666666667%;
    max-width: 41.66666666666667%;
    display: block;
  }
}

@media only screen and (min-width:0em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c6 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testClassA c5"
            style="margin-bottom: 10px;"
          >
            <div
              style="width: 100%;"
            />
          </div>
          <div
            class="c6"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testClassB c6"
            style="margin-bottom: 10px;"
          >
            1
          </div>
          <div
            class="c6"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid rowGutter and colGutter 3`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.375rem;
  margin-left: -0.375rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.375rem;
  padding-left: 0.375rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px;"
        >
          <div
            class="testClassA c5"
            style="margin-bottom: 10px;"
          >
            <div
              style="width: 100%;"
            />
          </div>
          <div
            class="c5"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px;"
        >
          <div
            class="testClassB c5"
            style="margin-bottom: 10px;"
          >
            1
          </div>
          <div
            class="c5"
            style="margin-bottom: 10px;"
          >
            2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test bleed 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.25rem;
  margin-left: -1.25rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="c5"
            style="margin-bottom: 0px;"
          >
            <div>
              Test bleed = "1440"
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test bleed 2`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.25rem;
  margin-left: -1.25rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1272px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="c5"
            style="margin-bottom: 0px;"
          >
            <div>
              Test bleed = "1272"
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test bleed 3`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -1.25rem;
  margin-left: -1.25rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 1.25rem;
  padding-left: 1.25rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="c5"
            style="margin-bottom: 0px;"
          >
            <div>
              Test bleed = "full"
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test viewports and falsy colGutter 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testCol c5"
            style="margin-bottom: 0px;"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test viewports and falsy colGutter 2`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 8.333333333333334%;
    -ms-flex-preferred-size: 8.333333333333334%;
    flex-basis: 8.333333333333334%;
    max-width: 8.333333333333334%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 0px; padding-left: 0px;"
        >
          <div
            class="testCol c5"
            style="margin-bottom: 0px;"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Grid> Grid test viewports and falsy colGutter 3`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 2rem;
  padding-left: 2rem;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: 0rem;
  margin-left: 0rem;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0rem;
  padding-left: 0rem;
}

.c2 {
  width: 100%;
}

.c3 {
  max-width: 1272px;
}

.c1 {
  width: 100%;
  max-width: 1440px;
  margin: 0 auto;
  height: 100%;
}

@media only screen and (min-width:0em) {
  .c5 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    max-width: 25%;
    display: block;
  }
}

@media only screen and (min-width:47.9375em) {
  .c5 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    max-width: 25%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c5 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    max-width: 25%;
    display: block;
  }
}

@media only screen and (min-width:79.5em) {
  .c5 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    max-width: 25%;
    display: block;
  }
}

<div>
  <div
    class="c0"
    style="padding-right: 0px; padding-left: 0px; margin-right: 0px; margin-left: 0px; max-width: 100%; font-size: 16px; flex: 1;"
  >
    <div
      class="c1"
      height="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3 c4"
          style="flex-direction: row; justify-content: flex-start; margin-right: auto; margin-left: auto; padding-right: 10px; padding-left: 10px;"
        >
          <div
            class="testCol c5"
            style="margin-bottom: 0px;"
          >
            1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
